{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 161,
  "lineage": "a34115de-3e19-2b80-366e-79789a74585e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230509",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/webserver-2023/zones/europe-west1-b/disks/webserver"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/webserver-2023/zones/europe-west1-b/instances/webserver",
            "instance_id": "7872702621802482805",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "foo": "bar"
            },
            "metadata_fingerprint": "HhTLVRZVRCA=",
            "metadata_startup_script": "#!/bin/bash\n\n# Install Nginx\napt-get update\napt-get install -y nginx\n\nopenssl req -x509 -newkey rsa:4096 -keyout /etc/key.pem -out /etc/cert.pem -sha256 -days 3650 -nodes -subj \"/C=XX/ST=StateName/L=CityName/O=CompanyName/OU=CompanySectionName/CN=CommonNameOrHostname\"\n\n# Configure Nginx to listen on port 443 and respond with the plaintext response\ncat \u003c\u003cEOF \u003e /etc/nginx/sites-available/default\nserver {\n    listen 80;\n    server [...]
            "name": "webserver",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.155.81.128",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/networks/webserver",
                "network_ip": "10.10.10.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/webserver-2023/regions/europe-west1/subnetworks/webserver",
                "subnetwork_project": "webserver-2023"
              }
            ],
            "project": "webserver-2023",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI",
                "size": 375
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/webserver-2023/zones/europe-west1-b/instances/webserver",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-https",
              "allow-ssh"
            ],
            "tags_fingerprint": "Bt6rXP1k6IQ=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_project_service.api",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-443",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-06T09:58:20.114-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/webserver-2023/global/firewalls/allow-443",
            "log_config": [],
            "name": "allow-443",
            "network": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/networks/webserver",
            "priority": 1000,
            "project": "webserver-2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/firewalls/allow-443",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_project_service.api",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "allow-ssh",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-06T10:27:49.529-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/webserver-2023/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/networks/webserver",
            "priority": 1000,
            "project": "webserver-2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_project_service.api",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/webserver-2023/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/networks/webserver",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "webserver-2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/routes/egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_project_service.api",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west1/webserver",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-06T09:59:43.675-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/webserver-2023/regions/europe-west1/subnetworks/webserver",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/networks/webserver",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "webserver-2023",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webserver-2023/regions/europe-west1/subnetworks/webserver",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_project_service.api",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/webserver-2023/global/networks/webserver",
            "mtu": 0,
            "name": "webserver",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "webserver-2023",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webserver-2023/global/networks/webserver"
          },
          "dependencies": [
            "google_project_service.api"
          ]
        }
      ]
    }
  ]
}